<resources>
    <string name="app_name">Tender Tool</string>
    <string name="settings_header_description">Settings header with decorative gears</string>

    <!-- settings page titles -->
    <string name="settings_title">Settings</string>
    <string name="settings_section_general">GENERAL</string>
    <string name="settings_section_profile">PROFILE</string>

    <!-- general settings options -->
    <string name="settings_language">Language</string>
    <string name="settings_language_value">English (ZA) </string>
    <string name="settings_theme">Theme</string>
    <string name="theme_light">Light</string>
    <string name="theme_dark">Dark</string>
    <string name="settings_notifications">Notifications</string>
    <string name="settings_notifications_value">Email</string>
    <string name="notifications_on" />
    <string name="notifications_off">Off</string>

    <!-- profile settings pptions -->
    <string name="settings_edit_profile">Edit Profile</string>
    <string name="settings_change_password">Change Password</string>
    <string name="settings_biometric_login">Biometric Login</string>

    <!-- buttons -->
    <string name="settings_logout">LOG OUT</string>

    <!-- nav bar headings -->
    <string name="settings">Settings</string>
    <string name="discover">Discover</string>
    <string name="analytics">Analytics</string>
    <string name="watchlist">Watchlist</string>

    <string name="search_for_tenders">Search for tenders...</string>
    <string name="notifications" translatable="false" />
    <string name="notification_icon" translatable="false" />

    <!-- watchlist -->
    <string name="search_your_watchlist_hint">Search your watchlist...</string>
    <string name="watchlist_header">Watchlist Header</string>
    <string name="filter_button_description">Filter watchlist</string>
    <string name="total_active_tenders">TOTAL ACTIVE TENDERS: </string>
    <string name="closed_label">CLOSED</string>

    <!-- analytics page -->
    <string name="analytics_header_description">Analytics Header with decorative arrows</string>
    <string name="analytics_daily_active_time_label">DAILY ACTIVE TIME</string>
    <string name="analytics_daily_active_time_value">3 HRS</string>
    <string name="analytics_tenders_searched_label">NO. OF TENDERS SEARCHED</string>
    <string name="analytics_tenders_searched_value">18 TODAY</string>
    <string name="analytics_popular_categories_label">YOUR POPULAR CATEGORIES</string>
    <string name="analytics_key_label">KEY</string>
    <string name="analytics_category_software">SOFTWARE &amp; APPLICATIONS</string>
    <string name="analytics_category_it">IT SERVICES</string>
    <string name="analytics_category_telecom">TELECOMMUNICATIONS</string>
    <string name="analytics_category_consultancy">CONSULTANCY</string>

    <string name="bookmark" translatable="false" />
    <string name="the_username_you_registered_with">The username you registered with</string>
    <string name="username" translatable="false">Username</string>

    <string-array name="language_options">
        <item>English</item>
        <item>Afrikaans</item>
        <item>Zulu</item>
    </string-array>

</resources>
